# SSE2-AVX-AVX512-Memory-Algorithms

./: LICENSE  LICENSE.md  ReadMe.md  __x86_64_memcpy.asm  __x86_64_memcpy.h  goorm.manifest  memory.hxx  memset-memcpy.cpp
CMake/: CMakeLists.txt
Include/: memcpy.h  memmove.h  memzero.h  platform.h  simd_memory_algorithms.h  simd_memory_algorithms.hpp
Source/: __x86_64_AVX_SSE_aligned_memcpy.asm  __x86_64_AVX_SSE_dest_aligned_memcpy.asm  __x86_64_AVX_SSE_source_aligned_memcpy.asm  __x86_64_AVX_SSE_unaligned_memcpy.asm
Test/CMake/: CMakeLists.txt  build.sh  main.cpp
